objects/Inverter_Event__e.object
<CustomObject>
    <description>Events generated by solar panel inverters.</description>
    <fields>
        <fullName>Timestamp__c</fullName>
        <defaultValue>Now()</defaultValue>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>error_code__c</fullName>
        <description>Error codes potentially generated by the inverter.</description>
        <label>error code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grid_output__c</fullName>
        <description>Measure of the inverter&apos;s output or consumption of power.</description>
        <label>grid output</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>model__c</fullName>
        <description>Inverter model.</description>
        <label>model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>serial_no__c</fullName>
        <description>Serial number of the inverter</description>
        <label>serial no</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>series__c</fullName>
        <description>Name of inverter product series.</description>
        <label>series</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Inverter Event</label>
    <pluralLabel>Inverter Events</pluralLabel>
</CustomObject>